Closed Bug 1278752 Opened 9 years ago Closed 9 years ago

Two Coverity fixes for the JIT

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1286490, CID-1296728)

Attachments

(2 files)

Two Coverity fixes coming up.
Assignee: nobody → n.nethercote
Status: NEW → ASSIGNED
bhackett, I *think* this call is just for its side-effects and the return value doesn't matter, but confirmation would be helpful. Thank you.
Attachment #8761061 - Flags: review?(bhackett1024)
Attachment #8761060 - Flags: review?(bhackett1024) → review+
Comment on attachment 8761061 [details] [diff] [review] (part 2) - Make explicit the ignoring of a hasStableClassAndProto() return value Review of attachment 8761061 [details] [diff] [review]: ----------------------------------------------------------------- Yes, the TemporaryTypeSet constructor will internally check for groups with unknown properties (which groups with unstable class/proto will have), so the rval isn't needed here.
Attachment #8761061 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/d1e5d75a2e9d6f46a48bc66c243dcfeb2cd40788 Bug 1278752 (part 1) - Add a missing null check in PropertyTypeIncludes. r=bhackett. https://hg.mozilla.org/integration/mozilla-inbound/rev/87f4fe4848c26efe073ed77313aac00ffd437060 Bug 1278752 (part 2) - Make explicit the ignoring of a hasStableClassAndProto() return value. r=bhackett.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: