Bug 1278752 (part 1) - Add a missing null check in PropertyTypeIncludes. r=bhackett.